# linccf

./: .gitignore  06-Catalog Inspection.ipynb  LICENSE  README.md
2024-12/: proj1.sub2.a.ipynb  (+2 more)
dash/: 00-run.sh  00-set_env.sh  01-Butler.ipynb  02-Raw file sizes.ipynb  02-Raw_file_sizes.ipynb  03-Import.ipynb  04-Post-processing.ipynb  04-Post_processing.ipynb  05-Nesting.ipynb  06-Catalog Inspection.ipynb  06.a-Basic Statistics.ipynb  06.a-Basic_Statistics.ipynb  06.b-ByField.ipynb  06.c-File_Sizes.ipynb  07-Crossmatch with ZTF and PS1.ipynb  07-Crossmatch_ZTF_PS1.ipynb  07-Generate_collections.ipynb  08-Crossmatch_ZTF_PS1.ipynb  08-Generate margins.ipynb  08-Generate_margins.ipynb  09-Generate JSON.ipynb  09-Generate index catalogs.ipynb  09-Generate_JSON.ipynb  09-Generate_index_catalogs.ipynb  10-Generate_weekly_JSON.ipynb  DASH-pipeline.ipynb  DASH.ipynb  README.md  dimension_reader.py  example_config.toml  pyproject.toml  rubin_reader.py
dash/dm_48556/: 01-Butler.ipynb  02-Raw file sizes.ipynb  03-Import.ipynb  04-Post-processing.ipynb  05-Nesting.ipynb  06-Catalog Inspection.ipynb
dash/dm_48556/field_sizes/: object.csv
dash/field_sizes/: diaForcedSource.csv  source.csv
dash/linccf_dash/: cli.py  config.py  default_config.toml
dash/notebooks/: 01-Butler.ipynb  02-Raw_file_sizes.ipynb  03-Import.ipynb  04-Post_processing.ipynb  05-Nesting.ipynb  06.a-Basic_Statistics.ipynb  07-Generate_collections.ipynb  08-Crossmatch_ZTF_PS1.ipynb  09-Generate_JSON.ipynb
dash/scratch/: 30-visits.ipynb  DASH.ipynb  duplicate_diaSource.csv
dash/util/: s3_migration.py
(+172 files in other folders)
